--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@calcom/embed-react": "^1.5.3",
+    "framer-motion": "^12.34.3",
+    "lenis": "^1.3.17",
+    "lucide-react": "^0.575.0",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
